# Artificial-Intelligence-Learning-Systems-AILS-

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: __init__.py  sentiment_analysis_pipeline.py
src/: __init__.py  api.py
src/data/: __init__.py  database.py  preprocessor.py  scraper.py
src/ethics/: __init__.py  bias_detector.py  privacy.py
src/models/: __init__.py  ensemble.py  neural_network.py  reinforcement.py  rnn_lstm.py  trainer.py
src/nlp/: __init__.py  ner.py  sentiment.py  tokenizer.py
src/utils/: __init__.py  config.py  metrics.py
src/vision/: __init__.py  cnn_model.py
tests/: __init__.py  test_ethics.py  test_models.py
